Fix CSS load order in Templates (#1698)
* switch css order

* fix overlow-y on sidebar

* fix logo issue

* fix scrollbar and logo issue

* fix scrollbars

--- a/panel/template/bootstrap/bootstrap.css
+++ b/panel/template/bootstrap/bootstrap.css
@@ -65,6 +65,7 @@ img.app-logo {
   padding-right: 10px;
   font-size: 28px;
   height: 30px;
+  max-width: inherit;
 }
 
 p.bk.card-button {
