--- a/panel/template/react/react.css
+++ b/panel/template/react/react.css
@@ -49,6 +49,7 @@ a.navbar-brand {
 img.app-logo {
   font-size: 28px;
   height: 30px;
+  max-width: inherit;
 }
 
 .pn-bar {
